Bugfix: cell padding now set to 4px updated pasdoc.css.inc Bugfix: Table cells with visibility markers were of different widths Bugfix: Some table cells didn't have a class
git-svn-id: https://svn.code.sf.net/p/pasdoc/code/trunk@598 e0417a13-a44b-4b77-80e5-317e04f1597d

--- a/source/component/pasdoc.css
+++ b/source/component/pasdoc.css
@@ -51,7 +51,10 @@ table.markerlegend td.legendmarker { text-align:center; }
 table.sections { background:white; }
 table.sections td {background:lightgray; }
 
-td { vertical-align:top; }
+table.summary td.itemcode { width:100%; }
+table.detail td.itemcode { width:100%; }
+
+td { vertical-align:top; padding:4px; }
 
 td.itemname {white-space:nowrap; }
 td.itemunit {white-space:nowrap; }
